--- a/Low Level Design/1. Observer Pattern.md
+++ b/Low Level Design/1. Observer Pattern.md
@@ -1,8 +1,12 @@
-
 Observer is a behavioral design pattern that lets you define a subscription mechanism to notify multiple objects about any events that happen to the object they’re observing.
 
 
-```jsx
+Points to be noted:
+1. Observer pattern defines one to many dependency between objects. One change in state of an objects notified all the dependent objects automatically.
+2.  Strive for loosely coupled designs between objects that interact.
+
+
+```ts
 interface Subject {
     attach(observer: Observer): void;
     detach(observer: Observer): void;
