Design patterns-add bullet patterns

--- a/Low Level Design/3. Decorator Pattern.md
+++ b/Low Level Design/3. Decorator Pattern.md
@@ -2,8 +2,20 @@ The Decorator pattern is a structural design pattern that allows you to dynamica
 
 The Decorator pattern is useful when you want to add behavior to individual objects, rather than to an entire class of objects. It is also useful when you want to add behavior without affecting the existing hierarchy, or when you want to add behavior that can be changed dynamically at runtime.
 
+Learnings:
+- Classes should be open to extension and closed to modification.
+
 Points to be noted:
-1. Classes should be closed for modification and open for extension.
+- Inheritance is one form of extension, but not necessarily the best way to achieve flexibility in our designs.
+- In our designs we should allow behavior to be extended without the need to modify existing code.
+- Composition and delegation can often be used to add new behaviors at runtime.
+- The Decorator Pattern provides an alternative to subclassing for extending behavior.
+- The Decorator Pattern involves a set of decorator classes that are used to wrap concrete components.
+- Decorator classes mirror the type of the components they decorate. (In fact, they are the same type as the components they decorate, either through inheritance or interface implementation.)
+- Decorators change the behavior of their components by adding new functionality before and/or after (or even in place of) method calls to the component.
+- You can wrap a component with any number of decorators.
+- Decorators are typically transparent to the client of the component; that is, unless the client is relying on the component’s concrete type.
+- Decorators can result in many small objects in our design, and overuse can be complex.
 
 ```ts
 interface Component {
