--- a/Low Level Design/1. Observer Pattern.md
+++ b/Low Level Design/1. Observer Pattern.md
@@ -1,9 +1,17 @@
 Observer is a behavioral design pattern that lets you define a subscription mechanism to notify multiple objects about any events that happen to the object they’re observing.
 
 
-Points to be noted:
+Learnings:
 1. Observer pattern defines one to many dependency between objects. One change in state of an objects notified all the dependent objects automatically.
 2.  Strive for loosely coupled designs between objects that interact.
+
+Bullet points:
+- The Observer Pattern defines a one-to-many relationship between objects.
+- Subjects, or as we also know them, Observables, update Observers using a common interface.
+- Observers are loosely coupled in that the Observable knows nothing about them, other than that they implement the Observer Interface.
+- You can push or pull data from the Observable when using the pattern (pull is considered more “correct”).
+- Don’t depend on a specific order of notification for your Observers.
+- Java has several implementations of the Observer Pattern, including the general purpose java.util.Observable.
 
 
 ```ts
