--- a/Low Level Design/4. Factory Pattern.md
+++ b/Low Level Design/4. Factory Pattern.md
@@ -3,7 +3,7 @@
 The Factory Method Pattern is useful if you’ve only got one concrete creator because you are decoupling the implementation of the product from its use. If you add additional products or change a product’s implementation, it will not affect your Creator (because the Creator is not tightly coupled to any ConcreteProduct).
 
 Learnings:
-- **Dependecy Inversion Principle**: Depend upon abstractions. Do not depend upon concrete classes.
+- **Dependecy Inversion Principle**: Depend upon abstractions. Do not depend upon concrete classes. Object creation does not depend on multiple product classes but one single factory method that can run some computation to find the correct product.
 
 Bullet points:
 - All factories encapsulate object creation.
@@ -19,6 +19,8 @@ Bullet points:
 Factory method:
 
 ```ts
+
+// Factory Method
 abstract class Creator {
     protected abstract factoryMethod(): Product;
 
@@ -40,6 +42,7 @@ class ConcreteCreator2 extends Creator {
     }
 }
 
+// Abstract Factory Method
 interface Product {
     operation(): string;
 }
