--- a/Low Level Design/7. Adapter and Facade Pattern.md
+++ b/Low Level Design/7. Adapter and Facade Pattern.md
@@ -7,6 +7,7 @@
 - When you need to use an existing class and its interface is not the one you need, use an adapter.
 - An adapter changes an interface into one a client expects.
 - Implementing an adapter may require little work or a great deal of work depending on the size and complexity of the target interface.
+- There are two forms of the Adapter Pattern: object and class adapters. Class adapters require multiple inheritance.
 - An adapter wraps an object to change its interface, a decorator wraps an object to add new behaviors and responsibilities, and a facade “wraps” a set of objects to simplify.
 
 ```ts
@@ -97,4 +98,107 @@ console.log('Client: I can work with Adaptee via the Adapter:');
 const adapter = new Adapter(adaptee);
 clientCode(adapter);
 
+```
+
+
+## Facade Pattern
+
+The Facade Pattern is a structural design pattern that provides a uniﬁed interface to a set of interfaces in a subsystem. It deﬁnes a higher-level interface that makes the subsystem easier to use.
+
+**Principle of least knowledge / Law of demeter**
+
+It states that:
+*"Talk to your immediate neighbors"*
+
+This principle prevents us from creating designs that have a large number of classes coupled together so that changes in one part of the system cascade to other parts. When you build a lot of dependencies between many classes, you are building a fragile system that will be costly to maintain and complex for others to understand.
+
+We should only invoke methods that belong to:
+- The object itself
+- Objects passed in as a parameter to the method
+- Any object the method creates or instantiates
+- Any components of the object
+
+Not to do:
+```ts
+getTemp() {
+	Thermometer thermometer = station.getThermometer();
+	return thermometer.getTemperature();
+}
+```
+
+instead:
+
+```ts
+getTemp() {
+return station.getTemperature(); // station is an object which facilitates this call
+}
+```
+
+
+ **Bullet points:**
+
+- When you have to simplify and unify a large interface or complex set of interface use a facade.
+- A facade decouples a client from complex subsystem.
+- Implementing a facade requires that we compose the facade with its subsystem and use delegation to perform the work of the facade.
+- You can implement more than one facade for a subsystem.
+
+
+```ts
+class Facade {
+    protected subsystem1: Subsystem1;
+    protected subsystem2: Subsystem2;
+
+    constructor(subsystem1?: Subsystem1, subsystem2?: Subsystem2) {
+        this.subsystem1 = subsystem1 || new Subsystem1();
+        this.subsystem2 = subsystem2 || new Subsystem2();
+    }
+
+    // Encapsulates initialisation and execution of operations on object
+    public operation(): string {
+        let result = 'Facade initializes subsystems:\n';
+        result += this.subsystem1.ready();
+        result += this.subsystem2.ready();
+        result += 'Facade orders subsystems to perform the action:\n';
+        result += this.subsystem1.operationN();
+        result += this.subsystem2.operationZ();
+
+        return result;
+    }
+}
+class Subsystem1 {
+    public ready(): string {
+        return 'Subsystem1: Ready!\n';
+    }
+
+    // ...
+
+    public operationN(): string {
+        return 'Subsystem1: Go!\n';
+    }
+}
+
+class Subsystem2 {
+    public ready(): string {
+        return 'Subsystem2: Get ready!\n';
+    }
+
+    // ...
+
+    public operationZ(): string {
+        return 'Subsystem2: Fire!';
+    }
+}
+
+function clientCode(facade: Facade) {
+    // ...
+
+    console.log(facade.operation());
+
+    // ...
+}
+
+const subsystem1 = new Subsystem1();
+const subsystem2 = new Subsystem2();
+const facade = new Facade(subsystem1, subsystem2);
+clientCode(facade);
 ```
